config external endpoint

--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>ht.bms</groupId>
-	<artifactId>booking</artifactId>
+	<artifactId>authserver</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>bms_booking</name>
-	<description>this api will expose that take and manage book for an applicant</description>
+	<name>bms_auth</name>
+	<description>this api will expose authentication and access</description>
 
 	<properties>
 		<java.version>21</java.version>
